--- a/package.json
+++ b/package.json
@@ -1,37 +1,37 @@
 {
-  "name": "elective-portfolio",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@react-three/fiber": "^8.17.10",
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.14.4",
-    "mini-svg-data-uri": "^1.4.4",
-    "next": "15.1.0",
-    "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7",
-    "three": "^0.171.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/three": "^0.171.0",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.16",
-    "typescript": "^5"
-  }
+	"name": "elective-portfolio",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@react-three/fiber": "^8.17.10",
+		"clsx": "^2.1.1",
+		"framer-motion": "^11.14.4",
+		"mini-svg-data-uri": "^1.4.4",
+		"next": "^14.2.20",
+		"next-themes": "^0.4.4",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-icons": "^5.4.0",
+		"tailwind-merge": "^2.5.5",
+		"tailwindcss-animate": "^1.0.7",
+		"three": "^0.171.0"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"@types/three": "^0.171.0",
+		"eslint": "^9",
+		"eslint-config-next": "15.1.0",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.16",
+		"typescript": "^5"
+	}
 }
