--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,12 @@
 		},
 		"types": ["@react-three/fiber", "three"]
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+	"include": [
+		"next-env.d.ts",
+		"**/*.ts",
+		"**/*.tsx",
+		".next/types/**/*.ts",
+		"next.config.js"
+	],
 	"exclude": ["node_modules"]
 }
