--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
 	},
 	"dependencies": {
 		"@react-three/fiber": "^8.17.10",
+		"@tsparticles/engine": "^3.7.1",
+		"@tsparticles/react": "^3.0.0",
+		"@tsparticles/slim": "^3.7.1",
 		"clsx": "^2.1.1",
-		"framer-motion": "^11.14.4",
+		"framer-motion": "^11.15.0",
 		"mini-svg-data-uri": "^1.4.4",
 		"next": "^14.2.20",
 		"next-themes": "^0.4.4",
