--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@tsparticles/slim": "^3.7.1",
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.15.0",
+		"lucide-react": "^0.469.0",
 		"mini-svg-data-uri": "^1.4.4",
 		"next": "^14.2.20",
 		"next-themes": "^0.4.4",
