--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"@types/tailwindcss": "^3.1.0",
 		"@types/three": "^0.171.0",
 		"eslint": "^9",
 		"eslint-config-next": "15.1.0",
