--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@tsparticles/engine": "^3.7.1",
 		"@tsparticles/react": "^3.0.0",
 		"@tsparticles/slim": "^3.7.1",
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.15.0",
 		"lucide-react": "^0.469.0",
@@ -22,7 +23,7 @@
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-icons": "^5.4.0",
-		"tailwind-merge": "^2.5.5",
+		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
 		"three": "^0.171.0"
 	},
